--- a/section04/gallery/style.css
+++ b/section04/gallery/style.css
@@ -1,39 +1,160 @@
 *{ margin:0;
 padding:0}
+body{
 
-html{
-    font-family: 'Open Sans', sans-serif;
+    background-color: rgb(231, 224, 211);
 
 }
 
-#page-title{
-    text-align: center;
-    padding: 50px;
-    font-weight:  400;
+
+html{
+    font-family: 'Roboto', sans-serif;
+
+}
+
+
+
+#top-line{
+    position: absolute; 
+    margin-top: 55px;
+    width: 100%;
+    height: 2px;
+    background-color: rgb(105, 98, 93);
+    
 }
 
 .container {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-around;
+  }
 
-    width: max-content;
-    max-width: 1000px;
-    background: lightpink;
-    margin: 0 auto 0 auto;
-    /* margin: 0 auto;
-    margin-top: 0;
-    margin-bottom: auto;
-    margin-left: 0;
-    margin-right: auto; */
-    /* TRBL//"TROUBLE"
-    Top,Right,Bottom,Left */
-    /* position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: tanslate(-50%,-50%); */
-}
-    /* images by default are:
-    display: inline-block */
-.container img{
-    width: 400px;
-    margin: 30px;
-    display:block;
-}
+  
+  
+  .box {
+    width: 20%;
+    height: 30px;
+    /* border: 4px solid black; */
+    background-color: rgb(192, 179, 166);
+    margin: 8px;
+    font-size: 20px;
+    color: rgb(61, 56, 53);
+    padding-left: 5px;
+    line-height: 30px;
+    
+  }
+
+  .box:hover{
+    height: 48px;
+    background-color: rgb(61, 56, 53);
+    color: rgb(168, 158, 142);
+  }
+
+  #right-corner{
+        color:#fff;
+        font-size: 200px;
+        margin-top: 500px;
+        margin-left: 70%;
+        }
+
+  #footerbox{
+      color:#fff;
+      background-color:#312e2e;
+      height:30px;
+      line-height:30px !important;
+      margin:0;
+      padding:0;
+      clear:both;
+      position:absolute;
+      bottom:0px;
+      width:100%;
+    }
+  
+   .fullbox {
+    position: absolute;
+    font-size: 20px;
+    top: 600px;
+    left: 15%;
+    width: 460px;
+    height: 200px;
+  }
+    .nbox{
+      width: 800px; 
+      margin:50px auto;
+      overflow: hidden;
+    }
+    .img-h{
+      float:left;
+    }
+
+    .img-h img{
+      display: flex;
+      margin: 0 auto;
+      width: 100%;
+      border-radius: 10px;
+      box-shadow: 0px 3px 12px -5px black;
+    }
+
+    .text-r{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+    }
+
+   
+    section {
+      
+      padding: 10px;
+      margin: 20px;
+      /* background-color: #ffff0044;border-radius: 20px;
+      box-shadow: 0px 3px 12px -5px black; */
+    }
+  
+    section > * {
+      margin-bottom: 10px;
+    }
+    
+    .container-test{
+      
+      padding: 15px;
+      /* background: lightblue;
+      border-radius: 15px;
+      box-shadow: 0px 2px 8px -5px  */
+    } 
+    
+    .put-em-in-a-row {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .sbox{
+      width: 50%;
+      height: 500px;
+      
+      margin: 150px;
+      margin-left: 150px;
+      /* background: lightpink;border-radius: 10px;
+      box-shadow: 0px 2px 5px -2px; */
+    }
+    h1{
+      margin-left: 150px
+    }
+
+    .wbox{
+      width: 50%;
+      height: 500px;
+      
+      margin: 100px;
+      margin-left: 100px;
+      /* background: rgb(103, 250, 225);border-radius: 10px;
+      box-shadow: 0px 2px 5px -2px; */
+    }
+
+    div img{
+      cursor: pointer;
+      transition: all 0.6s;
+    }
+    div img:hover{
+      transform: scale(1.05);
+    }
