--- a/section04/gallery/style.css
+++ b/section04/gallery/style.css
@@ -3,7 +3,6 @@ padding:0}
 body{
 
     background-color: rgb(231, 224, 211);
-
 }
 
 
@@ -110,8 +109,10 @@ html{
       
       padding: 10px;
       margin: 20px;
-      background-color: #ffff0044;border-radius: 20px;
-      box-shadow: 0px 3px 12px -5px black;
+      
+      /* background-color: #ffff0044;
+      border-radius: 20px;
+      box-shadow: 0px 3px 12px -5px black; */
     }
   
     section > * {
@@ -121,9 +122,10 @@ html{
     .container-test{
       
       padding: 15px;
-      background: lightblue;
+
+      /* background: lightblue;
       border-radius: 15px;
-      box-shadow: 0px 2px 8px -5px 
+      box-shadow: 0px 2px 8px -5px  */
     } 
     
     .put-em-in-a-row {
@@ -137,8 +139,9 @@ html{
       
       margin: 150px;
       margin-left: 150px;
-      background: lightpink;border-radius: 10px;
-      box-shadow: 0px 2px 5px -2px;
+
+      /* background: lightpink;border-radius: 10px;
+      box-shadow: 0px 2px 5px -2px; */
     }
     h1{
       margin-left: 150px
@@ -150,8 +153,8 @@ html{
       
       margin: 100px;
       margin-left: 100px;
-      background: rgb(103, 250, 225);border-radius: 10px;
-      box-shadow: 0px 2px 5px -2px;
+      /* background: rgb(103, 250, 225);border-radius: 10px;
+      box-shadow: 0px 2px 5px -2px; */
     }
 
     div img{
@@ -161,3 +164,41 @@ html{
     div img:hover{
       transform: scale(1.05);
     }
+
+    .background-move{
+      position: absolute;
+      width: 20px;
+      height: 5600px;
+      z-index: -1;
+      transform: skewX(-7deg);
+      background:  rgb(214, 202, 195);
+      animation-name: movement;
+      animation-duration: 60s;
+      animation-delay: 0ms;
+      animation-iteration-count: infinite;
+      animation-timing-function: cubic-bezier(.2,0,.38,1);
+      animation-fill-mode: forwards;
+      
+    }
+
+    @keyframes movement{
+      0%{
+        
+        margin-left: 50%;
+      }
+      50%{
+        margin-left: 80%;
+      }
+      100%{
+        
+        margin-left: 50%;
+      }
+    }
+    .fan{
+
+      border-radius:90px 0 -20px;
+      width: 80px;
+      height: 80px;
+      background: #666;
+    }
+    
