--- a/css-portfolio/style.css
+++ b/css-portfolio/style.css
@@ -25,3 +25,13 @@ header h1{
     height: 100vh;
     margin: 0 auto;
 }
+
+.gallery{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+}
+.gallery__item{
+    margin: 2vmin;
+}
