--- a/css-portfolio/pages/background_images/style.css
+++ b/css-portfolio/pages/background_images/style.css
@@ -4,8 +4,8 @@ html, body {
 
 .slides {
     padding: 0;
-    width: 609px;
-    height: 420px;
+    width: 100%;
+    height: 100%;
     display: block;
     margin: 0 auto;
     position: relative;
@@ -31,8 +31,8 @@ html, body {
 .slide {
     top: 0;
     opacity: 0;
-    width: 609px;
-    height: 420px;
+    width: 100%;
+    height: 100%;
     display: block;
     position: absolute;
     transform: scale(0);
@@ -46,7 +46,7 @@ html, body {
 }
 
 .nav label {
-    width: 200px;
+    width: 100%;
     height: 100%;
     display: none;
     position: absolute;
